Updated tests and spec
