# nodejs-server/service/ReferralService.js
@@ -2,7 +2,7 @@
 
 
 /**
- * Fetch a referral by id including its referee, status, link, and method
+ * Fetch a referral by id including its referer, referee, referer code, link, status, and method
  *
  * referralId Long ID of a referral to return
  * returns referral
@@ -10,15 +10,61 @@
 exports.getReferral = function(referralId) {
   return new Promise(function(resolve, reject) {
     var examples = {};
-    examples['application/json'] = {
-  "referer" : "10",
-  "code" : "XFCDOB",
-  "method" : "text",
-  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=referral_code",
+    examples['application/json'] = [ {
+  "name" : "textSent",
   "id" : "1",
+  "referer" : "10",
   "referee" : "11",
-  "status" : "Complete"
-};
+  "code" : "XFCDOB",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=XFCDOB",
+  "method" : "text",
+  "status" : "Sent"
+}, {
+  "name" : "emailReceived",
+  "id" : "2",
+  "referer" : "10",
+  "referee" : "21",
+  "code" : "XFCDOB",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=XFCDOB",
+  "status" : "Received",
+  "method" : "Email"
+}, {
+  "name" : "shareComplete",
+  "id" : "3",
+  "referer" : "30",
+  "referee" : "31",
+  "code" : "MRKCVW",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=MRKCVW",
+  "status" : "Complete",
+  "method" : "Share"
+}, {
+  "name" : "textReceived",
+  "id" : "4",
+  "referer" : "40",
+  "referee" : "41",
+  "code" : "LJEODN",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=LJEODN",
+  "status" : "Received",
+  "method" : "Text"
+}, {
+  "name" : "emailComplete",
+  "id" : "5",
+  "referer" : "50",
+  "referee" : "51",
+  "code" : "YGFVHG",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=YGFVHG",
+  "status" : "Complete",
+  "method" : "Email"
+}, {
+  "name" : "shareSent",
+  "id" : "6",
+  "referer" : "60",
+  "referee" : "61",
+  "code" : "WNQLRP",
+  "link" : "https://cartoncaps.link/abfilefa90p?referral_code=WNQLRP",
+  "status" : "Sent",
+  "method" : "Share"
+} ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
